--- a/volunteer-appl-frontend/src/pages/EventDetails.css
+++ b/volunteer-appl-frontend/src/pages/EventDetails.css
@@ -43,3 +43,15 @@
     width: 100%;
     margin-top: 15px;
 }
+
+.edit-btn{
+    background-color: #1a1a1a;
+    width: 100%;
+    margin-top: 15px;
+}
+
+.delete-btn{
+    background-color: red;
+    width: 100%;
+    margin-top: 15px;
+}
